--- a/QuanLiThuVien/QLTV_GUI/QLTV_GUI.csproj
+++ b/QuanLiThuVien/QLTV_GUI/QLTV_GUI.csproj
@@ -195,7 +195,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\book.png" />
@@ -217,6 +219,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QLTV_BUS\QLTV_BUS.csproj">
+      <Project>{fbb235d6-2e00-4587-ad79-d92e2ee3b326}</Project>
+      <Name>QLTV_BUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QLTV_DTO\QLTV_DTO.csproj">
+      <Project>{904e831c-c97a-4a82-900b-d1b4bed11b95}</Project>
+      <Name>QLTV_DTO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
