Tính năng tìm kiếm

--- a/QuanLiThuVien/QLTV_GUI/App.config
+++ b/QuanLiThuVien/QLTV_GUI/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="ConnectionString" value="Data Source=DESKTOP-BQVQP6H;Initial Catalog=QuanLiThuVien;Integrated Security=True"/>
+    <add key="ConnectionString" value="Data Source=.;Initial Catalog=QuanLiThuVien;Integrated Security=True"/>
   </appSettings>
 </configuration>
