--- a/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
+++ b/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
@@ -43,6 +43,7 @@
     <Compile Include="LoaiSachBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachBUS.cs" />
+    <Compile Include="TheLoaiTKBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLTV_DAL\QLTV_DAL.csproj">
