--- a/QuanLiThuVien/QLTV_DAL/QLTV_DAL.csproj
+++ b/QuanLiThuVien/QLTV_DAL/QLTV_DAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachDAL.cs" />
     <Compile Include="TacGiaDAL.cs" />
+    <Compile Include="TheLoaiTKDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLTV_DTO\QLTV_DTO.csproj">
