--- a/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
+++ b/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachBUS.cs" />
     <Compile Include="TheLoaiTKBUS.cs" />
+    <Compile Include="TraTreTKBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QLTV_DAL\QLTV_DAL.csproj">
