--- a/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
+++ b/QuanLiThuVien/QLTV_BUS/QLTV_BUS.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocGiaPBUS.cs" />
     <Compile Include="LoaiSachBUS.cs" />
+    <Compile Include="PhieuPhatBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SachBUS.cs" />
     <Compile Include="TheLoaiTKBUS.cs" />
